--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hello Azure Web App!</title>
+<title>Hi,I am Gaurav!</title>
 </head>
 <body>
-<h1>Hello from Azure Web App!</h1>
+<h1>Hi I am Gaurav!</h1>
 </body>
 </html>
